--- a/20_restapi/templates/main.html
+++ b/20_restapi/templates/main.html
@@ -1,25 +1,24 @@
-
-
+<!-- # Team NPC: Shafiul Haque, David Deng
+# SoftDev pd08
+# K20: A RESTful Journey Skyward
+# 2022-11-21
+# time spent: 0.3hrs -->
 <!DOCTYPE html>
-
-
 <html>
 
   <head>
-    <title> LOGIN PAGE </title>
+    <title> LET'S GO! </title>
   </head>
 
   <body>
-    <h1>
-      Welcome, Travelers of the Intertoobz!
-    </h1>
+    <h1><center>
+      {{head}}
+    </h1></center>
 
 
-    <h3>
-      Enter your username and password below to proceed.
-    </h3>
-
+    <center><img src="{{picture}}"></center>
     <br>
+    <center><p> {{explanation}} </p></center>
   </body>
 
 </html>
